[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ararinha"
version = "0.0.2"
authors = [
  { name="Leandro Seixas", email="leandro.fisica@gmail.com" },
]
description = "Job scheduling"
readme = "README.md"
license = {file = "LICENSE"} 
requires-python = ">=3.10"
dependencies = [
    'numpy>=2.0.0',
    'pandas',
    'pytest'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/leseixas/ararinha"
"Bug Tracker" = "https://github.com/leseixas/ararinha/issues"